# hermes-studio-desktop

./: .gitignore  AGENTS.md  PR_BODY.md  README.md  SESSION_STATUS.md  analyze_exports.py  check_funcs.py  check_refs.py  check_remaining.py  check_usage_detail.py  find_unused_exports.py  package.json  pnpm-lock.yaml  pyproject.toml  remove_funcs.py  remove_unused_exports.py  remove_unused_v2.py  remove_unused_v3.py  remove_unused_v4.py
.github/workflows/: ci.yml
apps/desktop-studio/: INSTALL.md  README.md  SESSION_STATUS.md  SETUP.md  package.json  playwright.config.ts  vite.config.ts
apps/desktop-studio/docs/: STORE_AUDIT.md
apps/desktop-studio/e2e/: global-setup.ts  global-teardown.ts  playwright.config.ts  smoke.spec.ts  tsconfig.json
apps/desktop-studio/scripts/: visual-smoke.mjs
apps/desktop-studio/src/: App.tsx  main.tsx
apps/desktop-studio/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-studio/src-tauri/capabilities/: default.json  preview.json
apps/desktop-studio/src-tauri/src/: lib.rs
apps/desktop-studio/src/api/: studioClient.test.ts  studioClient.ts
apps/desktop-studio/src/components/: ArtifactShelf.css  ErrorBoundary.tsx  Skeleton.tsx
apps/desktop-studio/src/lib/: runPresets.ts
apps/desktop-studio/src/stores/: adapterStore.ts  approvalStore.test.ts  approvalStore.ts  artifactStore.test.ts  artifactStore.ts  checkpointStore.ts  cronStore.ts  delegationStore.ts  hermesInventoryStore.ts  kanbanStore.test.ts  kanbanStore.ts  layoutStore.ts  logStore.ts  modelStore.ts  nativeStore.ts  previewStore.ts  processStore.test.ts  processStore.ts  profileStore.ts  runLedgerStore.test.ts  runLedgerStore.ts  runStore.ts  sessionStore.ts  themeStore.ts  toastStore.ts  toolPackStore.test.ts  toolPackStore.ts  worktreeStore.ts
apps/desktop-studio/src/styles/: activity-rail.css  applyTheme.ts  main.css
apps/desktop-studio/src/utils/: artifactExtraction.test.ts  artifactExtraction.ts  previewDocument.test.ts  previewDocument.ts  studioRouter.ts  themeWorld.test.ts  themeWorld.ts
apps/desktop-studio/tests/: README.md  a11y.spec.ts  api.spec.ts  flow.spec.ts  smoke.spec.ts
apps/desktop-studio/tests/fixtures/: mock-responses.ts  (+2 more)
docs/: ADAPTER_CONTRACT.md  ADR-0001-desktop-first.md  APPROVAL_CENTER.md  ARCHITECTURE.md  ARCHITECTURE_REDESIGN.md  BACKEND_AUDIT.md  COMPONENT_AUDIT.md  CONTEXT_INSPECTOR.md  DESIGN_CANVAS.md  HERMES_CAPABILITY_MATRIX.md  HERMES_LOGS_AND_PROFILES.md  HERMES_MODEL_PROVIDER_VIEWER.md  HERMES_RUNTIME_COMPATIBILITY.md  HERMES_STATE_READONLY.md  MISSION_CONTROL.md  PRODUCT_DIRECTION.md  QA_CHECKLIST.md  README.md  REAL_HERMES_SMOKE_TEST.md  REFERENCE_HERMES_DESKTOP.md  RELEASE_READY.md  REMOTE_SSH_MODE.md  ROADMAP.md  RUNTIME_STATUS.md  RUN_CENTERED_WORKBENCH.md  STUDIO_ARTIFACTS.md  STUDIO_KANBAN.md  STUDIO_STORAGE.md  THEME_PACKS.md  THEME_SYSTEM.md  UI_DIRECTION.md  WORKSPACES.md
docs/audits/: 2026-05-11-comprehensive-overhaul.md  E2E_FAILURE_ANALYSIS.md
legacy/textual-prototype/: README.md
scripts/: run_smoke_tests.sh  smoke_test.py
themes/default-dark/: theme.toml
themes/example-lotr/: theme.toml
themes/example-minions/: theme.toml
themes/minecraft-overworld/: theme.toml
themes/minimal-light/: theme.toml
tool-packs/example-tools/: manifest.json
(+58 files in other folders)
