[project]
name = "hermes-local-studio"
version = "0.1.0"
description = "A local-first, themeable desktop workbench for Hermes Agent"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "textual>=0.86.0",
  "rich>=13.9.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
  "httpx>=0.27.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "tomli>=2.0.1; python_version < '3.11'",
  "tomli-w>=1.0.0",
  "aiosqlite>=0.20.0",
  "watchfiles>=0.24.0",
  "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.0",
  "mypy>=1.11.0",
]

[project.scripts]
hermes-local-adapter = "hermes_adapter.server:main"
# Note: hermes-local-shell entry point pointed to the legacy Textual UI.
# The Textual prototype has been moved to legacy/textual-prototype/.
# To run the legacy prototype, install in editable mode and use:
#   python -m hermes_shell_ui.main
# The main product is now the Tauri desktop app under apps/desktop-studio/.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages/hermes_adapter/hermes_adapter"]
# Note: legacy/textual-prototype/apps/textual_shell/hermes_shell_ui is not included
# in the wheel by default. The Textual prototype is legacy/reference only.

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["hermes_adapter", "hermes_shell_ui"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/hermes_adapter/tests"]
