[package]
name = "hermes-desktop-studio"
version = "0.1.0"
description = "A local-first, themeable desktop studio for Hermes Agent"
authors = ["etherman-os"]
edition = "2021"

[lib]
name = "hermes_desktop_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
